# F110-OSU-GrandPrix-2023

./: README.md
data/csv/: leftwp.csv  opt.csv  refwp.csv  rightwp.csv  sides.csv  traj.csv  ways.csv
scripts/trajectory_gen/: check_center_traj_free.py  debug_traj.py  leftwp.py  pubodom.py  see_traj.py  trajopt.ipynb  trajopt_pro.py  waypoint_logger.py  wp_pure_pursuit.py
scripts/util/: aeb.py  check_map_free.py  gap_fol.py  get_map_laser_scans.py  lasertopoints.py  local_grid.cpp  obstacle_publisher.py  pcl_proc.cpp  pcl_proc.py  record_pp.py  stanleycon.py  wallfol.py
src/assignment/RRT/: CMakeLists.txt  package.xml  rrt_params.yaml
src/assignment/RRT/include/rrt/: rrt.h
src/assignment/RRT/src/: global grid.cpp  old_rrt.cpp  rrt.cpp  rrt_local.cpp
src/assignment/assignment_python/: CMakeLists.txt  package.xml
src/assignment/assignment_python/launch/: a1.launch  a2.launch  gap_follower.launch  wall_follower.launch
src/assignment/assignment_python/src/: aeb.py  aeb_format.py  gap_fol.py  pure_pursuit.py  subpub.py  tp.py  wall_fol.py  waypoint_logger.py
src/assignment/cpp_assignment/: CMakeLists.txt  package.xml
src/assignment/cpp_assignment/launch/: a1.launch  initial.rviz
src/assignment/cpp_assignment/msg/: scan_range.msg
src/assignment/cpp_assignment/src/: a1.cpp  a2.cpp  a2_format.cpp
src/particle_filter/: package.xml
src/particle_filter/launch/: gmapping.launch  laser_scan_match.launch  laser_scan_matcher.launch  localize.launch  particle_filter_live.launch
src/particle_filter/src/: particle_filter.py  utils.py
src/pp_variants/: CMakeLists.txt  package.xml
src/pp_variants/launch/: a1.launch  a2.launch  beavers.launch  full_state_runner.launch  mapping_offline.launch  mapping_online.launch  single_lap.launch  static_obstacle_avoider.launch
src/pp_variants/msg/: scan_range.msg
src/pp_variants/src/: a2.cpp  a2_format.cpp  full_tree_pp.cpp  knn.cpp  local_grid.cpp  pp_dyn.cpp  pp_static_obst.cpp  pure_pursuit.cpp  root_node.cpp
src/system/racecar/racecar/: CMakeLists.txt
src/system/racecar/racecar/config/racecar-v2/: low_level_mux.yaml  vesc.yaml  vesc_new.yaml
src/system/waypoint_logger/: CMakeLists.txt  package.xml
